# Sentinel

./: .gitignore  README.md  pyproject.toml
src/sentinel/: __init__.py  alerts.py  banner.py  checkers.py  cli.py  db.py  services.py  trends.py  tui.py  web.py
src/sentinel/templates/: dashboard.html
