[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "1.0.0"
description = "Multi-target monitoring system — ping, SSL, DNS, ports, domains. CLI, TUI, and Web dashboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "nomer" }]
keywords = ["monitoring", "uptime", "ssl", "dns", "dashboard", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "textual>=3.0",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.scripts]
sentinel = "sentinel.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
